Fixing a small spacing issue in the footer.

--- a/css/style.css
+++ b/css/style.css
@@ -419,8 +419,12 @@ ul, li
 /**************************************************************************************************/
 .Footer
 {
-	padding: 30px 10px 60px 10px;
+	padding: 30px 0 60px 0;
 	box-shadow: inset 0 14px 9px -7px rgba(17, 17, 17, 0.65);
 }
 
-.Ad { height: 330px; }
+.Ad
+{
+	padding: 0 10px 0 10px;
+	height: 330px;
+}
